--- a/index.html
+++ b/index.html
@@ -62,6 +62,15 @@
             </p>
 
         </section>
+        <section>
+            <img src="assets/horse.jpg" id='horse-image' />
+            <img src="assets/dog.jpg" id='dog-image'/>
+            <img src="assets/cat.jpg" id='cat-image'/>
+            <audio id="horse-sound" src ="assets/horse.wav"></audio>
+            <audio id="cat-sound" src ="assets/cat.wav" />
+            <audio id="dog-sound" src="assets/dog.wav" />
+
+        </section>
     </main>
     <footer>
         <div class="copy gutter-right">&copy; 2020 Alchemy Code Lab</div>
